--- a/public/style.css
+++ b/public/style.css
@@ -19,42 +19,33 @@
   .card{
     position: relative;
     transform: translateX(-110%)
+    
   }
   
   article {
-    width:25vw;
+    width:18em;
     display:flex;
     flex-direction:column;
     align-items:center;
-    justify-content:flex-start;
+    justify-content:center;
     box-shadow:0 0 20px 20px rgba(0,0,0,.1);
     border-radius:1rem;
     position: relative;
     transition:.25s;
     background: rgb(166, 0, 255);
     background: linear-gradient(0deg, #E94560 5%, #0F3460 100%);
-
-  background-image: radial-gradient(circle at bottom left, #E94560,),
+    background-image: radial-gradient(circle at bottom left, #E94560,),
     radial-gradient(circle at top left, #7E3C60,),
     radial-gradient(circle at center right, #0F3460,);
-  background-size: 200% 200%;
-  animation: movement 10s ease infinite alternate-reverse;
+    background-size: 200% 200%;
+    animation: movement 10s ease infinite alternate-reverse;
   }
   
   .front{
     position: relative;
     z-index: 3;
   }
-  
-  .werk{
-    position: absolute;
-  
-    top:0;
-    left:0;
-    bottom:0;
-    right:0;
-  }
-  
+
   .persoonlijk{
     position: absolute;
     top:0;
@@ -72,8 +63,7 @@
     
   }
   
-  
-  h1 {
+  h1, h2 {
     margin:2rem 0 1rem;
     color: white;
   }
@@ -159,7 +149,7 @@
   
 
   body.expand article.persoonlijk {
-    transform: translateX(220%)
+    transform: translateX(110%)
   }
   
   body.expand .uil-angle-right-b{
@@ -189,9 +179,9 @@
   }
 }
 
-@media  (max-width: 40em) {
+@media  (max-width: 60em) {
     .card {
-      display: flex;
-      flex-direction: column;
+     transform: translateY(-110%), translateX(0);
+     
     }
 }
