--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
           <h2>Wie ben ik</h2>
         </header>
         <p>
-          <%= member.bio %>
+          <%= member.bio.html %>
         </p>
 
       </article>
